prevent wrapping mobile header

--- a/style.less
+++ b/style.less
@@ -211,6 +211,7 @@ nav {
  .stickyheader();
  font-size:130%;
  width:100%;
+ white-space:nowrap;
  padding-left:1em;
  padding-right:1em;
  font-weight:bolder;
